erste änderung Header und Titel

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title> </title>
+  <title>Joao Wichert | graphics & motion pictures</title>
 </head>
 <body>
-  
+  <header>
+    <img src=".svg" class="c-header__logo__dark o-wrapper--panel u-fit" alt="Logo JW">
+    <ul class="Menu">
+    <li class="c-header__item"><a href="#/About" class="link_header">About</a>
+    </li>
+    <li class="c-header__item"><a href="#/work" class="link_header">Work</a>
+    </li>
+    <li class="c-header__item"><a href="#/contact" class="link_header">Contact</a>
+    </li>
+    </ul>
+</header>
+
 </body>
 </html>
