--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
   <meta charset="utf-8">
   <title>Joao Wichert | graphics & motion pictures</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+  <link rel="stylesheet" href="CSS/Stylesheet.css">
 </head>
+
 <body>
-  <header>
-    <img src=".svg" class="c-header__logo__dark o-wrapper--panel u-fit" alt="Logo JW">
-    <ul class="Menu">
-    <li class="c-header__item"><a href="#/About" class="link_header">About</a>
+  <div class="header">
+    <div class="logoJW">
+    <img src="Images/InitailienJW_VAR02.svg" alt="Logo JW" height="70px">
+  </div>
+    <ul class="Navi">
+    <li class="c-header__item"><a href="#/work" class="link_header">work</a>
     </li>
-    <li class="c-header__item"><a href="#/work" class="link_header">Work</a>
+    <li class="c-header__item"><a href="#/About" class="link_header">about</a>
     </li>
-    <li class="c-header__item"><a href="#/contact" class="link_header">Contact</a>
+    <li class="c-header__item"><a href="#/contact" class="link_header">contact</a>
     </li>
     </ul>
-</header>
+  </div>
+
+<!-- <div class="background-video"> -->
+<video class="background-video">
+    <source src="Videos/Abschlussfilm Joao VÖNIX IHK-Cut.mp4" autoplay
+    muted loop type="video/mp4">
+</video>
+<!--  </div> -->
 
 </body>
 </html>
