--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
     </ul>
   </div>
 
-<!-- <div class="background-video"> -->
-<video class="background-video">
-    <source src="Videos/Abschlussfilm Joao VÖNIX IHK-Cut.mp4" autoplay
-    muted loop type="video/mp4">
-</video>
-<!--  </div> -->
+<div class="wrapper">
+  <video preload="auto"  class="background-video"autoplay muted loop controls height="100%" preload>
+  <source src="Videos/IMGA0022.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
+
+  <div class="textfeld">
+    <p>About me</br>blablablabalablabalaalbalablabalabalba</p>
+  </div>
+</div>
 
 </body>
 </html>
