--- a/index.html
+++ b/index.html
@@ -23,16 +23,24 @@
     </ul>
   </div>
 
-<div class="wrapper">
-  <video preload="auto"  class="background-video"autoplay muted loop controls height="100%" preload>
-  <source src="Videos/IMGA0022.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-  </video>
+  <div class="wrapper">
+    <video preload="auto"  class="background-video"autoplay muted loop controls height="100%" preload>
+    <source src="Videos/IMGA0022.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
 
-  <div class="textfeld">
-    <p>About me</br>blablablabalablabalaalbalablabalabalba</p>
+    <div class="textfeld">
+      <h2>About</h2>
+      <p>About me</br>blablablabalablabalaalbalablabalabalba</p>
+    </div>
+    <div class="Footer">
+      <p>blablablabalablabalaalbalablabalabalba</p>
+    </div>
+
+
   </div>
-</div>
+
+
 
 </body>
 </html>
