--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </video>
 
     <div class="textfeld">
-      <h2>About</h2>
+      <h2>Work</h2>
       <p>About me</br>blablablabalablabalaalbalablabalabalba</p>
     </div>
     <div class="Footer">
