--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="Images/InitailienJW_VAR02.svg" alt="Logo JW" height="70px">
   </div>
     <ul class="Navi">
-    <li class="c-header__item"><a href="#/work" class="link_header">work</a>
+    <li class="c-header__item"><a href="#textfeld" class="link_header">work</a>
     </li>
     <li class="c-header__item"><a href="#/About" class="link_header">about</a>
     </li>
@@ -24,14 +24,14 @@
   </div>
 
   <div class="wrapper">
-    <video preload="auto"  class="background-video"autoplay muted loop controls height="100%" preload>
+    <video preload="auto"  class="background-video"autoplay muted loop height="100%" preload>
     <source src="Videos/showreel_Website_Test.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
 
-    <div class="textfeld">
+    <div id="textfeld">
       <h2>Work</h2>
-      <p>About me</br>blablablabalablabalaalbalablabalabalba</p>
+      <p>About me</br>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
     <div class="Footer">
       <p>blablablabalablabalaalbalablabalabalba</p>
