add abou; add Conact + Formular

--- a/index.html
+++ b/index.html
@@ -11,27 +11,55 @@
 <body>
   <div class="header">
     <div class="logoJW">
+    <a href="#index">
     <img src="Images/InitailienJW_VAR02.svg" alt="Logo JW" height="70px">
+  </a>
+
   </div>
     <ul class="Navi">
-    <li class="c-header__item"><a href="#textfeld" class="link_header">work</a>
+    <li class="c-header__item"><a href="#work" class="link_header">work</a>
     </li>
-    <li class="c-header__item"><a href="#/About" class="link_header">about</a>
+    <li class="c-header__item"><a href="#about" class="link_header">about</a>
     </li>
-    <li class="c-header__item"><a href="#/contact" class="link_header">contact</a>
+    <li class="c-header__item"><a href="#contact" class="link_header">contact</a>
     </li>
     </ul>
   </div>
 
   <div class="wrapper">
+    <div id="index">
+    </div>
     <video preload="auto"  class="background-video"autoplay muted loop height="100%" preload>
     <source src="Videos/showreel_Website_Test.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-
-    <div id="textfeld">
+<div id="work">
+</div>
+    <div class="textfeld">
       <h2>Work</h2>
+        <div class="Projects">
+          <div class="">
+
+          </div>
+        </div>
+    </div>
+    <div id="about">
+    </div>
+    <div class="textfeld">
+      <h2>About me</h2>
       <p>About me</br>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div id="contact">
+    </div>
+    <div class="letztestextfeld">
+      <h2>Contact</h2>
+      <form id="form" class="topBefore">
+		  <input id="name" type="text" placeholder="NAME">
+		  <input id="email" type="text" placeholder="E-MAIL">
+		  <textarea id="message" type="text" placeholder="MESSAGE">
+      </textarea>
+      <input id="submit" type="submit" value="SEND">
+      </form>
     </div>
     <div class="Footer">
       <p>blablablabalablabalaalbalablabalabalba</p>
