Formular eingefügt; Work divs eingerichtet

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Joao Wichert | graphics & motion pictures</title>
+  <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="Images/favicon.ico" type="image/x-icon"> <!-- Favicon -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" href="CSS/Stylesheet.css">
@@ -37,8 +40,14 @@
 </div>
     <div class="textfeld">
       <h2>Work</h2>
-        <div class="Projects">
-          <div class="">
+        <div class="Projectswrapper">
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
 
           </div>
         </div>
@@ -50,12 +59,18 @@
       <p>About me</br>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
     <div id="contact">
+
     </div>
     <div class="letztestextfeld">
       <h2>Contact</h2>
-
-
-
+      <div class="formular">
+      <form id="form">
+      		  <input id="name" type="text" placeholder="NAME">
+      		  <input id="email" type="text" placeholder="E-MAIL">
+      		  <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+        <input id="submit" type="submit" value="SEND">
+      </form>
+    </div>
     </div>
     <div class="Footer">
       <p>blablablabalablabalaalbalablabalabalba</p>
