--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <source src="Videos/showreel_Website_Test.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
-<div id="work">
-</div>
+    <div id="work">
+    </div>
     <div class="textfeld">
       <h2>Work</h2>
         <div class="Projectswrapper">
@@ -59,7 +59,6 @@
       <p>About me</br>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
     </div>
     <div id="contact">
-
     </div>
     <div class="letztestextfeld">
       <h2>Contact</h2>
@@ -72,10 +71,20 @@
       </form>
     </div>
     </div>
-    <div class="Footer">
-      <p>blablablabalablabalaalbalablabalabalba</p>
-    </div>
 
+    <div class="Footer">
+      <a class="socialmediaicons" href="https://www.instagram.com/boogiebouncejoe/">
+      <img src="Images/InstagramIcon_VEKTOR.svg" alt="socialmedia" height="20px">
+      </a>
+      <a class="socialmediaicons"
+      href="https://vimeo.com/">
+      <img src="Images/vimeoIcon_VEKTOR.svg" alt="socialmedia" height="20px">
+      </a>
+      <a class="socialmediaicons"
+      href="https://www.linkedin.com/in/joao-wichert-7a7868140/">
+      <img src="Images/LinkedIn_VEKTOR.svg" alt="socialmedia" height="20px">
+      </a>
+    </div>
 
   </div>
 
