--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     </div>
 
-    <div class="Footer">
+    <div class="footer">
       <a class="socialmediaicons" href="https://www.instagram.com/boogiebouncejoe/">
       <img src="Images/InstagramIcon_VEKTOR.svg" alt="socialmedia" height="20px">
       </a>
