form action hinzugefügt

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="letztestextfeld">
       <h2>Contact</h2>
       <div class="formular">
-      <form id="form">
+      <form id="form" action="mailto:joao.wichert@gmail.com" method="post">
       		  <input id="name" type="text" placeholder="NAME">
       		  <input id="email" type="text" placeholder="E-MAIL">
       		  <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
