correct email form

--- a/index.html
+++ b/index.html
@@ -50,6 +50,24 @@
           <div class="Projects">
 
           </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
+          <div class="Projects">
+
+          </div>
         </div>
     </div>
     <div id="about">
@@ -63,10 +81,10 @@
     <div class="letztestextfeld">
       <h2>Contact</h2>
       <div class="formular">
-      <form id="form" action="mailto:joao.wichert@gmail.com" method="post">
+      <form id="form" action="mailto:joao.wichert@gmail.com" method="post" enctype="text/plain">
       		  <input id="name" type="text" placeholder="NAME">
       		  <input id="email" type="text" placeholder="E-MAIL">
-      		  <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+      		  <textarea id="message" type="text" placeholder="MESSAGE"rows="7" cols="30"></textarea>
         <input id="submit" type="submit" value="SEND">
       </form>
     </div>
