social icon links in neuen Tab öffnen lassen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <meta http-equiv="content-language" content="de" />
   <title>Joao Wichert | graphics & motion pictures</title>
   <link rel="shortcut icon" href="Images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="Images/favicon.ico" type="image/x-icon"> <!-- Favicon -->
@@ -91,15 +92,15 @@
     </div>
 
     <div class="footer">
-      <a class="socialmediaicons" href="https://www.instagram.com/boogiebouncejoe/">
+      <a class="socialmediaicons" href="https://www.instagram.com/boogiebouncejoe/" target="_blank">
       <img src="Images/InstagramIcon_VEKTOR.svg" alt="socialmedia" height="20px">
       </a>
       <a class="socialmediaicons"
-      href="https://vimeo.com/">
+      href="https://vimeo.com/" target="_blank">
       <img src="Images/vimeoIcon_VEKTOR.svg" alt="socialmedia" height="20px">
       </a>
       <a class="socialmediaicons"
-      href="https://www.linkedin.com/in/joao-wichert-7a7868140/">
+      href="https://www.linkedin.com/in/joao-wichert-7a7868140/" target="_blank">
       <img src="Images/LinkedIn_VEKTOR.svg" alt="socialmedia" height="20px">
       </a>
     </div>
