work thumpnails eingesetzt+links; about text geschrieben;

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="index">
     </div>
     <video preload="auto"  class="background-video"autoplay muted loop height="100%" preload>
-    <source src="Videos/showreel_Website_Test.mp4" type="video/mp4">
+    <source src="Videos/showreel_Website_Test02.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video>
     <div id="work">
@@ -43,39 +43,43 @@
       <h2>Work</h2>
         <div class="Projectswrapper">
           <div class="Projects">
-
+            <a href="Work/006.html" target="_blank">
+              <img src="Images/thumpnail006.jpg">
+            </a>
           </div>
           <div class="Projects">
-
+            <a href="Work/005" target="_blank">
+              <img src="Images/thumpnail005.jpg">
+            </a>
           </div>
           <div class="Projects">
-
+            <a href="Work/004" target="_blank">
+              <img src="Images/thumpnail004.jpg">
+            </a>
           </div>
           <div class="Projects">
-
+            <a href="Work/003" target="_blank">
+              <img src="Images/thumpnail003.jpg">
+            </a>
           </div>
           <div class="Projects">
-
+            <a href="Work/002" target="_blank">
+              <img src="Images/thumpnail002.jpg">
+            </a>
           </div>
           <div class="Projects">
-
+            <a href="Work/001" target="_blank">
+              <img src="Images/thumpnail001.jpg">
+            </a>
           </div>
-          <div class="Projects">
 
-          </div>
-          <div class="Projects">
-
-          </div>
-          <div class="Projects">
-
-          </div>
         </div>
     </div>
     <div id="about">
     </div>
     <div class="textfeld">
       <h2>About me</h2>
-      <p>About me</br>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+      <p>My name is João Wichert and I'm a 26 years old designstudent living in Berlin. I completed a vocational training as audiovisual mediadesigner March 2016 and since October 2016 I'm studying communication design at the HTW Berlin.</p>
     </div>
     <div id="contact">
     </div>
