hover overlay thumpnails; font Teko hinzugefügt

--- a/Work/006.html
+++ b/Work/006.html
@@ -32,7 +32,14 @@
 
   <div class="wrapper">
     <div id="006">
-    <img src="Images/thumpnail006" height="100%">
+      <video preload="auto"  class="background-video"autoplay muted controls loop height="100%" preload>
+      <source src="../Videos/showreel_Website_Test02.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+      <div class="textfeld">
+        <h2>Musikvideo ACSO-Yeshe030</h2>
+        <p>Entstanden 2016 info info</p>
+      </div>
     </div>
 
 
