--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" href="Images/favicon.ico" type="image/x-icon"> <!-- Favicon -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
   <link rel="stylesheet" href="CSS/Stylesheet.css">
 </head>
 
@@ -44,32 +45,50 @@
         <div class="Projectswrapper">
           <div class="Projects">
             <a href="Work/006.html" target="_blank">
-              <img src="Images/thumpnail006.jpg">
+              <img src="Images/thumpnail006.jpg"alt="Musikvideo ACSO-Yeshe030" class="image">
+              <div class="middle">
+              <div class="text">Musikvideo </br> ACSO-Yeshe030</div>
+              </div>
             </a>
           </div>
           <div class="Projects">
             <a href="Work/005" target="_blank">
-              <img src="Images/thumpnail005.jpg">
+              <img src="Images/thumpnail005.jpg" alt="Dokumentation Mama"class="image">
+              <div class="middle">
+              <div class="text">Dokumentation </br> Mama</div>
+              </div>
             </a>
           </div>
           <div class="Projects">
             <a href="Work/004" target="_blank">
-              <img src="Images/thumpnail004.jpg">
+              <img src="Images/thumpnail004.jpg" alt="Foto Selbstportrait"class="image">
+              <div class="middle">
+              <div class="text">Foto</br> Selbstportrait</div>
+              </div>
             </a>
           </div>
           <div class="Projects">
             <a href="Work/003" target="_blank">
-              <img src="Images/thumpnail003.jpg">
+              <img src="Images/thumpnail003.jpg" alt="Fotos Run yup pie"class="image">
+              <div class="middle">
+              <div class="text">Fotos</br>Run yup pie</div>
+              </div>
             </a>
           </div>
           <div class="Projects">
             <a href="Work/002" target="_blank">
-              <img src="Images/thumpnail002.jpg">
+              <img src="Images/thumpnail002.jpg" alt="Logo Roommatch"class="image">
+              <div class="middle">
+              <div class="text">Logo</br>Roommatch</div>
+              </div>
             </a>
           </div>
           <div class="Projects">
             <a href="Work/001" target="_blank">
-              <img src="Images/thumpnail001.jpg">
+              <img src="Images/thumpnail001.jpg" alt="Fotos Atmo"class="image">
+              <div class="middle">
+              <div class="text">Fotos</br>Atmo</div>
+              </div>
             </a>
           </div>
 
