fotos zu works seiten hinzugefügt;

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </a>
           </div>
           <div class="Projects">
-            <a href="Work/005" target="_blank">
+            <a href="Work/005.html" target="_blank">
               <img src="Images/thumpnail005.jpg" alt="Dokumentation Mama"class="image">
               <div class="middle">
               <div class="text">Dokumentation </br> Mama</div>
@@ -60,7 +60,7 @@
             </a>
           </div>
           <div class="Projects">
-            <a href="Work/004" target="_blank">
+            <a href="Work/004.html" target="_blank">
               <img src="Images/thumpnail004.jpg" alt="Foto Selbstportrait"class="image">
               <div class="middle">
               <div class="text">Foto</br> Selbstportrait</div>
@@ -68,7 +68,7 @@
             </a>
           </div>
           <div class="Projects">
-            <a href="Work/003" target="_blank">
+            <a href="Work/003.html" target="_blank">
               <img src="Images/thumpnail003.jpg" alt="Fotos Run yup pie"class="image">
               <div class="middle">
               <div class="text">Fotos</br>Run yup pie</div>
@@ -76,7 +76,7 @@
             </a>
           </div>
           <div class="Projects">
-            <a href="Work/002" target="_blank">
+            <a href="Work/002.html" target="_blank">
               <img src="Images/thumpnail002.jpg" alt="Logo Roommatch"class="image">
               <div class="middle">
               <div class="text">Logo</br>Roommatch</div>
@@ -84,7 +84,7 @@
             </a>
           </div>
           <div class="Projects">
-            <a href="Work/001" target="_blank">
+            <a href="Work/001.html" target="_blank">
               <img src="Images/thumpnail001.jpg" alt="Fotos Atmo"class="image">
               <div class="middle">
               <div class="text">Fotos</br>Atmo</div>
