--- a/Work/004.html
+++ b/Work/004.html
@@ -34,7 +34,7 @@
     <div id="004" class="fotos">
       <img src="../Images/work004_01.jpg" alt="work004_01">
       <div class="textfeld">
-        <h2>Foto Selbstportrait</h2>
+        <h2>Foto - Selbstportrait</h2>
         <p>Entstanden 2016 info info</p>
       </div>
     </div>
