letzte Korrekturen vor abgabe mitttlerres Textfeld;

--- a/Work/001.html
+++ b/Work/001.html
@@ -39,7 +39,7 @@
     </div>
       <div class="textfeld">
         <h2>Fotos - Atmo</h2>
-        <p>Entstanden 2015 info info</p>
+        <p>abstrakte Fotoserie </p>
       </div>
     </div>
 
