--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </video>
     <div id="work">
     </div>
-    <div class="textfeld">
+    <div class="erstestextfeld">
       <h2>Work</h2>
         <div class="Projectswrapper">
           <div class="Projects">
@@ -91,12 +91,14 @@
               </div>
             </a>
           </div>
+          <div class="allworks"> <a href="Work/007.html" target="_blank"> <p>ALL WORKS</p>
+          </div>
 
         </div>
     </div>
     <div id="about">
     </div>
-    <div class="textfeld">
+    <div class="mittlerestextfeld">
       <h2>About me</h2>
       <p>My name is João Wichert and I'm a 26 years old designstudent living in Berlin. I completed a vocational training as audiovisual mediadesigner March 2016 and since October 2016 I'm studying communication design at the HTW Berlin.</p>
     </div>
