--- a/Work/002.html
+++ b/Work/002.html
@@ -35,7 +35,7 @@
       <img src="../Images/work002_01.jpg" alt="work004_01">
       <div class="textfeld">
         <h2>Logo - Roommatch</h2>
-        <p>Entstanden 2015 info info</p>
+        <p>Logo im Zuge eines Azubifilm entstanden</p>
       </div>
     </div>
 
